# Vector-Valut

./: .gitignore  .importlinter  ARCHITECTURE.md  ATTRIBUTION.md  EVALUATION.md  LICENSE  PRIVACY.md  README.md  RELEASE_NOTES.md  TECHNICAL_REPORT.md  build_msi.py  index.html  pyproject.toml
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 3fc61182931b_app_meta_table_for_kb_fingerprint.py  fe1c3783517a_initial_schema.py
docs/: architecture.md  planning.md  roadmap.md
scripts/: calibrate.py
src/osdc/: __init__.py  container.py  main.py
src/osdc/api/: routes.py
src/osdc/config/: paths.py  settings.py
src/osdc/data/: curriculum.yaml
src/osdc/desktop/: tray.py  window.py
src/osdc/domain/: enums.py  models.py  ports.py
src/osdc/pipeline/chunk/: chunker.py
src/osdc/pipeline/classify/: curriculum.py  gate.py  keyword.py  rules.py  semester_aware.py
src/osdc/pipeline/embed/: clip_embedder.py  hash_embedder.py  sentence_embedder.py
src/osdc/pipeline/extract/: cleaner.py  detector.py  ocr.py  office.py  pdf.py  plaintext.py  registry.py
src/osdc/pipeline/ingest/: hashing.py  ignore.py  stability.py  watcher.py
src/osdc/pipeline/llm/: ollama_client.py
src/osdc/pipeline/organize/: organizer.py
src/osdc/services/: feedback.py  images.py  ingestion.py  knowledge.py  library.py  planner.py  processing.py  queue.py  rag.py  search.py
src/osdc/setup/: bootstrap.py  hardware.py
src/osdc/storage/: db.py  repositories.py  schema.py  vectors.py
src/osdc/ui/: chat.py  components.py  pages.py  setup.py  shell.py  state.py  theme.py
tests/: conftest.py  test_classify.py  test_extract_and_chunk.py  test_images_service.py  test_ingestion.py  test_organizer.py  test_pipeline_e2e.py  test_planner.py  test_rag.py  test_settings.py  test_ui_helpers.py  test_ui_navigation.py
